--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mrs. MAD | &hearts;....</title>
-    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
-            src="./assets/favicon.ico"
+            src="./favicon.ico"
             alt="Logo"
             style="width: 40px"
             class="rounded-pill"
@@ -70,13 +70,13 @@
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
             <img
-              src="./assets/land1.jpg"
+              src="./land1.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Boat on Calm Water"
             />
 
             <img
-              src="./assets/port1.jpg"
+              src="./port1.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Wintry Mountain Landscape"
             />
@@ -84,13 +84,13 @@
 
           <div class="col-lg-4 mb-4 mb-lg-0">
             <img
-              src="./assets/port2.jpg"
+              src="./port2.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Mountains in the Clouds"
             />
 
             <img
-              src="./assets/land2.jpg"
+              src="./land2.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Boat on Calm Water"
             />
@@ -98,13 +98,13 @@
 
           <div class="col-lg-4 mb-4 mb-lg-0">
             <img
-              src="./assets/land3.jpg"
+              src="./land3.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Waves at Sea"
             />
 
             <img
-              src="./assets/port3.jpg"
+              src="./port3.jpg"
               class="w-100 shadow-1-strong rounded mb-4"
               alt="Yosemite National Park"
             />
@@ -118,7 +118,7 @@
         
         <p>
           <div class="card" style="width:400px">
-            <img class="card-img-top" src="./assets/we.jpg" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="./we.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title"><b>I love you alotttt my baby</b></h4>
               <p class="card-text">Bacha, you are my <b>heartbeat</b>, my life. My day starts and ends with you. You are always in my heart. I promise, I'll be always there with you... will protect you ... will stand by you... will support you... <b>FOREVER</b><br>I love you <b>wifey</b><br><br><span class="sign">Aadu</span></p>
